change position icon

--- a/investix/account-programs/basic.html
+++ b/investix/account-programs/basic.html
@@ -99,6 +99,7 @@
           <div class="account-programs__box  account-programs__box--analysis">
             <b>Technical Analysis - The Basic</b>
           </div>
+          <div class="account-programs__box  account-programs__box--hidden"></div>
         </div>
       </div>
     </section>
