--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -110,6 +110,8 @@
           <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
           </div>
+          <div class="account-programs__box  account-programs__box--hidden"></div>
+          <div class="account-programs__box  account-programs__box--hidden"></div>
         </div>
       </div>
     </section>
