little change markup

--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -103,7 +103,7 @@
             <b>Learn Advanced Trading Strategies</b>
           </div>
         </div>
-        <div class="account-programs__flex  account-programs__flex--around">
+        <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--risk">
             <b>Risk Management Tools</b>
           </div>
