--- a/investix/account-programs/basic.html
+++ b/investix/account-programs/basic.html
@@ -89,7 +89,7 @@
             <b>1 Month Trading Room Access</b>
           </div>
         </div>
-        <div class="account-programs__flex  account-programs__flex--around">
+        <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
             <b>1 Month Webinar Access</b>
           </div>
