--- a/investix/account-programs/pro.html
+++ b/investix/account-programs/pro.html
@@ -117,7 +117,7 @@
             <b>Three Live 3-hours Online Sessions 1:1</b>
           </div>
         </div>
-        <div class="account-programs__flex  account-programs__flex--around">
+        <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--pers">
             <b>Personal Mentoring</b>
           </div>
