--- a/forexglobal/trading/product-specification.html
+++ b/forexglobal/trading/product-specification.html
@@ -133,7 +133,7 @@
         		<th>Min Position Size</th>
         		<th>Max Position Size</th>
         		<th>Swap Long In Points</th>
-        		<th>Swap Long In Points</th>
+        		<th>Swap Short In Points</th>
         		<th>Trading Hours (Server Time)*</th>
         	</tr>
           <tr>
@@ -936,7 +936,7 @@
         		<th>Min Position Size</th>
         		<th>Max Position Size</th>
         		<th>Swap Long In Points</th>
-        		<th>Swap Long In Points</th>
+        		<th>Swap Short In Points</th>
         		<th>Trading Hours(Server Time)*</th>
         	</tr>
           <tr>
@@ -991,7 +991,7 @@
         		<th>Min Position Size</th>
         		<th>Max Position Size</th>
         		<th>Swap Long In Points</th>
-        		<th>Swap Long In Points</th>
+        		<th>Swap Short In Points</th>
         		<th>Trading Hours(Server Time)*</th>
         	</tr>
         	<tr>
@@ -1222,7 +1222,7 @@
         		<th>Min Position Size</th>
         		<th>Max Position Size</th>
         		<th>Swap Long In Points</th>
-        		<th>Swap Long In Points</th>
+        		<th>Swap Short In Points</th>
         		<th>Trading Hours (Server Time)*</th>
         	</tr>
           <tr>
@@ -1284,7 +1284,7 @@
         		<th>Min Position Size</th>
         		<th>Max Position Size</th>
         		<th>Swap Long In Points</th>
-        		<th>Swap Long In Points</th>
+        		<th>Swap Short In Points</th>
         		<th>Trading Hours(Server Time)*</th>
         	</tr>
           <tr>
@@ -1457,7 +1457,7 @@
         		<th>Min Position Size</th>
         		<th>Max Position Size</th>
         		<th>Swap Long In Points</th>
-        		<th>Swap Long In Points</th>
+        		<th>Swap Short In Points</th>
         		<th>Trading Hours(Server Time)*</th>
         	</tr>
           <tr>
