add contact us page

--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -492,15 +492,15 @@
           <li><a href="ultimate.html">Ultimate Program</a></li>
           <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
-        <!-- <ul class="footer__list">
+        <ul class="footer__list">
           <li><b>About</b></li>
-          <li><a href="#">About Us</a></li>
+          <!-- <li><a href="#">About Us</a></li>
           <li><a href="#">About Meir Barak</a></li>
           <li><a href="#">Meet Out Team</a></li>
           <li><a href="#">Partners</a></li>
-          <li><a href="#">Refer A Friend</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul> -->
+          <li><a href="#">Refer A Friend</a></li> -->
+          <li><a href="../contact-us.html">Contact Us</a></li>
+        </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
           <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
