--- a/investix/account-programs/expert.html
+++ b/investix/account-programs/expert.html
@@ -523,14 +523,14 @@
       <div class="container">
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
-          <!-- <ul class="footer__rules">
+          <ul class="footer__rules">
             <li><a href="#">Terms of Use</a></li>
             <li>|</li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
             <li class="footer__up">
               <button type="button"></button>
             </li>
-          </ul> -->
+          </ul>
         </div>
       </div>
     </div>
