--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -520,7 +520,7 @@
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
           <ul class="footer__rules">
-            <li><a href="#">Terms of Use</a></li>
+            <li><a href="../templates/terms-and-conditions.html">Terms of Use</a></li>
             <li>|</li>
             <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
             <li class="footer__up">
