--- a/investix/contact-us.html
+++ b/investix/contact-us.html
@@ -87,6 +87,20 @@
       </div>
     </div>
   </main>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--mc"></div>
+        <div class="payment__box  payment__box--ae"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--paypal"></div>
+        <div class="payment__box  payment__box--skrill"></div>
+        <div class="payment__box  payment__box--ideal"></div>
+        <div class="payment__box  payment__box--bank"></div>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <div class="container">
       <a href="index.html">
@@ -114,11 +128,8 @@
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
-          <!-- <li><a href="#">About Us</a></li>
-          <li><a href="#">About Meir Barak</a></li>
-          <li><a href="#">Meet Out Team</a></li>
-          <li><a href="#">Partners</a></li>
-          <li><a href="#">Refer A Friend</a></li> -->
+          <li><a href="templates/terms-and-conditions.html">Terms and Conditions</a></li>
+          <li><a href="templates/privacy-policy.html">Privacy Policy</a></li>
           <li><a class="footer__active">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
@@ -126,7 +137,6 @@
           <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
-          <!-- <li><a class="footer__chat" href="#">Live Trading Chat Room</a></li> -->
         </ul>
       </div>
     </div>
@@ -139,14 +149,7 @@
       <div class="container">
         <div class="footer__inner">
           <p class="footer__copy">© 2018 All rights reserved</p>
-          <ul class="footer__rules">
-            <li><a href="templates/terms-and-conditions.html">Terms of Use</a></li>
-            <li>|</li>
-            <li><a href="templates/privacy-policy.html">Privacy Policy</a></li>
-            <li class="footer__up">
-              <button type="button"></button>
-            </li>
-          </ul>
+          <button class="footer__up" type="button"></button>
         </div>
       </div>
     </div>
