some new blocks

--- a/investix/trading-room.html
+++ b/investix/trading-room.html
@@ -367,24 +367,45 @@
         <h2>Day Trading Chat Rooms</h2>
         <div class="scope__img">
           <div class="scope__flex">
-            <div class="scope__box  scope__box--1">
-              <b>Live video and audio feed of our analyst trading teem.</b>
+            <div class="scope__box  scope__box--right">
+              <b>1</b>
+              <p>Live video and audio feed of our analyst trading teem.</p>
             </div>
-            <div class="scope__box  scope__box--3">
-              <b>Live video and audio feed of our analyst trading teem.</b>
+            <div class="scope__box  scope__box--left">
+              <b>3</b>
+              <p>Live video and audio feed of our analyst trading teem.</p>
             </div>
           </div>
           <div class="scope__flex  scope__flex--second">
-            <div class="scope__box  scope__box--2">
-              <b>Live, real time charts of stoks that are being traded and wathed throughout the trading day.</b>
+            <div class="scope__box  scope__box--right">
+              <b>2</b>
+              <p>Live, real time charts of stoks that are being traded and wathed throughout the trading day.</p>
             </div>
-            <div class="scope__box  scope__box--4">
-              <b>Live, real time charts of stoks that are being traded and wathed throughout the trading day.</b>
+            <div class="scope__box  scope__box--left">
+              <b>4</b>
+              <p>Live, real time charts of stoks that are being traded and wathed throughout the trading day.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <section class="plan">
+      <div class="container">
+        <h1>Live Trading Chat Room Membership Plan</h1>
+        <ul>
+          <li>
+            <b>$399/Month</b>
+            <div class="plan__info">
+              <b>Monthly Subscription</b>
+              <p>Start your monthly subscription right now! Your credit card will be charged monthly. You may cancel membership anytime. Month-to-Month Flexibility</p>
+              
+            </div>
+          </li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </section>
   </main>
   <section class="payment">
     <div class="container">
