--- a/investix/trading-room.html
+++ b/investix/trading-room.html
@@ -391,19 +391,125 @@
     </div>
     <section class="plan">
       <div class="container">
-        <h1>Live Trading Chat Room Membership Plan</h1>
-        <ul>
-          <li>
-            <b>$399/Month</b>
+        <h1 class="plan__name">Live Trading Chat Room Membership Plan</h1>
+        <ul class="plan__list">
+          <li class="plan__item">
+            <b>$399<span>/Month</span></b>
             <div class="plan__info">
-              <b>Monthly Subscription</b>
+              <b>Monthly<br>Subscription</b>
               <p>Start your monthly subscription right now! Your credit card will be charged monthly. You may cancel membership anytime. Month-to-Month Flexibility</p>
-              
+              <ul>
+                <li>Full Transparency</li>
+                <li><hr></li>
+                <li>Professional Insights</li>
+                <li><hr></li>
+                <li>Real-Time Advice</li>
+                <li><hr></li>
+                <li>Powerful Training</li>
+                <li><hr></li>
+                <li>Live Trading</li>
+              </ul>
+              <a class="button  button--green  button--small  plan__button" href="#">Subscribe</a>
             </div>
           </li>
-          <li></li>
-          <li></li>
+          <li class="plan__item">
+            <b>$Free</b>
+            <div class="plan__info">
+              <b>14-DAY TRIAL<br>MEMBERSHIP</b>
+              <p>New to day trading? Experienced trader? Looking to improve your skill set? Join me for a free Trading Chat Room trial and allow me to be your personal mentor. A 14-day Free Trial</p>
+              <ul>
+                <li>Full Transparency</li>
+                <li><hr></li>
+                <li>Professional Insights</li>
+                <li><hr></li>
+                <li>Real-Time Advice</li>
+                <li><hr></li>
+                <li>Powerful Training</li>
+                <li><hr></li>
+                <li>Live Trading</li>
+              </ul>
+              <a class="button  button--green  button--small  plan__button" href="#">Subscribe</a>
+            </div>
+          </li>
+          <li class="plan__item">
+            <b>$2990<span>/Year</span></b>
+            <div class="plan__info">
+              <b>ONE-YEAR<br>MEMBERSHIP</b>
+              <p>Get our one-year membership at a great price. Pay for 7.5 months, but get a full 12-month membership! Save $1800!!!</p>
+              <ul>
+                <li>Full Transparency</li>
+                <li><hr></li>
+                <li>Professional Insights</li>
+                <li><hr></li>
+                <li>Real-Time Advice</li>
+                <li><hr></li>
+                <li>Powerful Training</li>
+                <li><hr></li>
+                <li>Live Trading</li>
+              </ul>
+              <a class="button  button--green  button--small  plan__button" href="#">Subscribe</a>
+            </div>
+          </li>
         </ul>
+      </div>
+    </section>
+    <section class="comment">
+      <div class="container">
+        <h1 class="comment__name">What Our <span>Customers Are Saying</span></h1>
+        <ul class="comment__list">
+          <li class="comment__item">
+            <b>Joe Vincent</b>
+            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <div class="comment__author">
+              <div class="comment__img"></div>
+              <div class="comment__info">
+                <b>Vince91</b>
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="comment__item">
+            <b>Joe Vincent</b>
+            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <div class="comment__author">
+              <div class="comment__img"></div>
+              <div class="comment__info">
+                <b>Vince91</b>
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="comment__item">
+            <b>Joe Vincent</b>
+            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <div class="comment__author">
+              <div class="comment__img"></div>
+              <div class="comment__info">
+                <b>Vince91</b>
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <a class="button  button--big  comment__button" href="#">14 Days Free Trial</a>
       </div>
     </section>
   </main>
@@ -450,7 +556,11 @@
           <li><b>About</b></li>
           <li><a href="templates/terms-and-conditions.html">Terms and Conditions</a></li>
           <li><a href="templates/privacy-policy.html">Privacy Policy</a></li>
-          <li><a class="footer__active">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+        </ul>
+        <ul class="footer__list">
+          <li><b>Trading Chat Room</b></li>
+          <li><a class="footer__active">Live Trading Chat Room</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
@@ -474,8 +584,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-plugins.js"></script>
+  <script src="js/main.min.js" async></script>
 </body>
 </html>
