--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -40,8 +40,9 @@
                 <li><a href="crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
+            <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
             <!-- <li><a href="#">Education</a></li>
-            <li><a href="#">Chat Room</a></li>
+          
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li> -->
             <!-- <li> -->
@@ -514,7 +515,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
-          <li><a href="#">Live Trading Chat Room</a></li>
+          <li><a href="../trading-room.html">Live Trading Chat Room</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
