--- a/investix/index.html
+++ b/investix/index.html
@@ -41,6 +41,7 @@
                 <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
+            <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
             <!-- <li><a href="#">Education</a></li>
             <li><a class="nav__chat" href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
@@ -483,7 +484,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Trading Chat Room</b></li>
-          <li><a href="#">Live Trading Chat Room</a></li>
+          <li><a href="trading-room.html">Live Trading Chat Room</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Contact information</b></li>
