--- a/investix/contact-us.html
+++ b/investix/contact-us.html
@@ -40,13 +40,13 @@
                 <li><a href="account-programs/crypto-master.html">Crypto Master</a></li>
               </ul>
             </li>
-            <!-- <li><a href="#">Education</a></li>
-            <li><a class="nav__chat" href="#">Chat Room</a></li>
-            <li><a href="#">Trading Tools</a></li>
-            <li><a href="#">Contacts</a></li> -->
-            <!-- <li> -->
-              <!-- select -->
-            <!-- </li> -->
+            <li>
+              <a href="#">Education</a>
+              <ul class="nav__sublist">
+                <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
+              </ul>
+            </li>
+            <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
           </ul>
         </nav>
         <a class="button  button--small  header__button" href="#">14 Days Free Trial</a>
@@ -106,16 +106,10 @@
         <img class="footer__logo" src="img/logo-white.svg" alt="Investix">
       </a>
       <div class="footer__flex">
-        <!-- <ul class="footer__list">
+        <ul class="footer__list">
           <li><b>Education</b></li>
-          <li><a href="#">Self Study Course</a></li>
-          <li><a href="#">Star Trader Course</a></li>
-          <li><a href="#">Top Trader Course</a></li>
-          <li><a href="#">Mentorship Program</a></li>
-          <li><a href="#">Forex, Commodities & EU</a></li>
-          <li><a href="#">Markets Course</a></li>
-          <li><a href="#">Free Day Trading Course!</a></li>
-        </ul> -->
+          <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
+        </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="account-programs/basic.html">Basic Program</a></li>
@@ -132,8 +126,11 @@
           <li><a class="footer__active">Contact Us</a></li>
         </ul>
         <ul class="footer__list">
+          <li><b>Trading Chat Room</b></li>
+          <li><a href="trading-room.html">Live Trading Chat Room</a></li>
+        </ul>
+        <ul class="footer__list">
           <li><b>Contact information</b></li>
-          <!-- <li><a class="footer__phone" href="tel:+442038290032">+442038290032</a></li> -->
           <li><a class="footer__email" href="mailto:info@investix.com">info@investix.com</a></li>
           <li><a class="footer__home" href="https://www.investix.com">www.investix.com</a></li>
         </ul>
