--- a/investix/contact-us.html
+++ b/investix/contact-us.html
@@ -150,8 +150,8 @@
       </div>
     </div>
   </footer>
-  <script src="../js/jquery.min.js"></script>
-  <script src="../js/jquery-plugins.js"></script>
-  <script src="../js/main.min.js" async></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-plugins.js"></script>
+  <script src="js/main.min.js" async></script>
 </body>
 </html>
