--- a/investix/education/star-trader-course.html
+++ b/investix/education/star-trader-course.html
@@ -164,7 +164,7 @@
         <ul class="comment__list">
           <li class="comment__item">
             <b>Joe Vincent</b>
-            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <p>“I have been a member of the of the Investix Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
             <div class="comment__author">
               <div class="comment__img"></div>
               <div class="comment__info">
@@ -181,7 +181,7 @@
           </li>
           <li class="comment__item">
             <b>Joe Vincent</b>
-            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <p>“I have been a member of the of the Investix Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
             <div class="comment__author">
               <div class="comment__img"></div>
               <div class="comment__info">
@@ -198,7 +198,7 @@
           </li>
           <li class="comment__item">
             <b>Joe Vincent</b>
-            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <p>“I have been a member of the of the Investix Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
             <div class="comment__author">
               <div class="comment__img"></div>
               <div class="comment__info">
@@ -219,7 +219,7 @@
     <section class="contact  contact--star">
       <div class="container">
         <h1 class="contact__title  contact__title--chat">Live Trading Chat Room Free Access</h1>
-        <p class="contact__subtitle  contact__subtitle--chat">Fill in your details to get a free pass to Tradenet’s inteactive live trading chat room & live day trading chat on YouTube</p>
+        <p class="contact__subtitle  contact__subtitle--chat">Fill in your details to get a free pass to Investix’s inteactive live trading chat room & live day trading chat on YouTube</p>
         <form class="contact__form" action="" method="post">
           <div class="contact__flex">
             <input class="contact__input" type="text" name="First Name" placeholder="Your Name">
