--- a/investix/trading-room.html
+++ b/investix/trading-room.html
@@ -70,7 +70,7 @@
         <div class="inner__flex">
           <div class="inner__mockup"></div>
           <div class="inner__column">
-            <p>Join Tradenet’s live day trading chat room, one of the world’s leading trading communities. Participate in live trading and analysts. Improve your skills and learn how to make consistent and steady income.</p>
+            <p>Join Investix’s live day trading chat room, one of the world’s leading trading communities. Participate in live trading and analysts. Improve your skills and learn how to make consistent and steady income.</p>
             <p><b>Going Live Daily Monday to Friday</b><br>*European market session 9:00 am GMT<br>*U.S Markets 9:15 am EST / 2:15 pm GMT</p>
             <p>As a <b>live trading chat room member</b> you’ll benefit from an unfiltered, real-time view at every move our professional traders make!</p>
             <a class="button  button--medium  inner__button" href="#">14 Days Free Trial</a>
@@ -81,7 +81,7 @@
     <section class="contact  contact--chat">
       <div class="container">
         <h1 class="contact__title  contact__title--chat">Live Trading Chat Room Free Access</h1>
-        <p class="contact__subtitle  contact__subtitle--chat">Fill in your details to get a free pass to Tradenet’s inteactive live trading chat room & live day trading chat on YouTube</p>
+        <p class="contact__subtitle  contact__subtitle--chat">Fill in your details to get a free pass to Investix’s inteactive live trading chat room & live day trading chat on YouTube</p>
         <form class="contact__form" action="" method="post">
           <div class="contact__flex">
             <input class="contact__input" type="text" name="First Name" placeholder="Your Name">
@@ -465,7 +465,7 @@
         <ul class="comment__list">
           <li class="comment__item">
             <b>Joe Vincent</b>
-            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <p>“I have been a member of the of the Investix Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
             <div class="comment__author">
               <div class="comment__img"></div>
               <div class="comment__info">
@@ -482,7 +482,7 @@
           </li>
           <li class="comment__item">
             <b>Joe Vincent</b>
-            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <p>“I have been a member of the of the Investix Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
             <div class="comment__author">
               <div class="comment__img"></div>
               <div class="comment__info">
@@ -499,7 +499,7 @@
           </li>
           <li class="comment__item">
             <b>Joe Vincent</b>
-            <p>“I have been a member of the of the Tradenet Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
+            <p>“I have been a member of the of the Investix Trading Room since November 2014. And after two and a half years of losing, in December 2014, I have become a profitable trader thanks to your stock trading room!”</p>
             <div class="comment__author">
               <div class="comment__img"></div>
               <div class="comment__info">
