--- a/investix/index.html
+++ b/investix/index.html
@@ -48,6 +48,12 @@
               </ul>
             </li>
             <li><a class="nav__chat" href="trading-room.html">Chat Room</a></li>
+            <li>
+              <select class="nav__select">
+                <option value="en">EN</option>
+                <option value="ru">RU</option>
+              </select>
+            </li>
           </ul>
         </nav>
         <a class="button  button--small  header__button" href="#">14 Days Free Trial</a>
@@ -58,8 +64,8 @@
     <div class="slider__box">
       <div class="slider__container">
         <div class="slider__text">
-          <h1 class="slider__title">Day Trading Education Package</h1>
-          <p class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
+          <h1 data-translate-key="slider-title" class="slider__title">Day Trading Education Package</h1>
+          <p data-translate-key="slider-text" class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
           <a class="button  button--small  slider__button" href="#">Get Started</a>
         </div>
         <div class="slider__img  slider__img--basic"></div>
@@ -502,6 +508,7 @@
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-plugins.js"></script>
+  <script src="js/local.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/main.min.js" async></script>
