--- a/investix/index.html
+++ b/investix/index.html
@@ -169,7 +169,7 @@
           <a class="button  button--medium  live__button" href="#">14 Days Free Trial</a>
           <a class="button  button--medium  button--white  live__button" href="#">Read More</a>
         </div>
-        <!-- <div class="live__mockup"></div> -->
+        <div class="live__mockup"></div>
       </div>
     </div>
   </section>
