--- a/investix/index.html
+++ b/investix/index.html
@@ -64,8 +64,8 @@
     <div class="slider__box">
       <div class="slider__container">
         <div class="slider__text">
-          <h1 data-translate-key="slider-title" class="slider__title">Day Trading Education Package</h1>
-          <p data-translate-key="slider-text" class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
+          <h1 class="slider__title">Day Trading Education Package</h1>
+          <p class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
           <a class="button  button--small  slider__button" href="#">Get Started</a>
         </div>
         <div class="slider__img  slider__img--basic"></div>
