--- a/forexglobal/trading/announcements.html
+++ b/forexglobal/trading/announcements.html
@@ -104,6 +104,10 @@
     <div class="container">
       <h1 class="inner__name">Announcements</h1>
       <ul class="announcements__list">
+        <li><b>June 2018</b></li>
+        <li><a href="../img/pdf/Market-Holidays-in-June-2018.pdf" target="_blank">Market Holidays in June 2018</a></li>
+      </ul>
+      <ul class="announcements__list">
         <li><b>May 2018</b></li>
         <li><a href="../img/pdf/Private-Policy-Update.pdf" target="_blank">Private Policy Update in May 2018</a></li>
         <li><a href="../img/pdf/Market-Holidays-in-May-2018.pdf" target="_blank">Market Holidays in May 2018</a></li>
