--- a/index.html
+++ b/index.html
@@ -70,28 +70,30 @@
 				<h3>HTML - CSS</h3>
 				<ul>
 					<li>HTML5 & CSS3</li>
-					<li>LESS, SASS</li>
-					<li>Adaptive markup</li>
-					<li>Cross-browser markup</li>
-					<li>BEM</li>
 					<li>Flexbox</li>
+					<li>LESS, SASS</li>
+					<li>BEM</li>
 					<li>Bootstrap</li>
-					<li>Трансформация и анимация</li>
-					<li>Написание семантически верного кода</li>
+					<li>Валидная верстка</li>
+					<li>Кроссбраузерная верстка</li>
+					<li>Семантическая верстка</li>
+					<li>Адаптивная верстка</li>
+					<li>Доступная верстка</li>
 				</ul>
 				<h3>Java-Script</h3>
-					<ul>
-					<li>Основы: функции, массивы, объекты</li>
+				<ul>
 					<li>DOM</li>
-					<li>jQuery</li>
 					<li>Gulp</li>
+					<li>jQuery</li>
 				</ul>
 				<h3>Общее</h3>
-					<ul>
-					<li>Adobe Photoshop</li>
+				<ul>
+					<li>Photoshop, Adobe Assets</li>
+					<li>Jira</li>
 					<li>Базовые знания <b>MySql</b>, <b>PHP</b> и <b>WordPress</b></li>
-					<li>Использование системы контроля версий (GitHub)</li>
-					<li>Оптимизация (PageSpeed Insights)</li>
+					<li>Использование системы контроля версий (Git)</li>
+					<li>Оптимизация скорости</li>
+					<li>Терминал</li>
 				</ul>
 			</div>
 		</div>
@@ -176,10 +178,10 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/miner.PNG" alt=""/>
+							<img src="assets/images/prizma.png" alt=""/>
 							<figcaption>
-								<h2>MainingCrypto</h2>
-								<p><a href="https://mainingcrypto.com/" class="work-a" target="_blank">Посмотреть</a></p>
+								<h2>PrizmaFX</h2>
+								<p><a href="prizma/index.html" class="work-a" target="_blank">Посмотреть</a></p>
 							</figcaption>			
 						</figure>
 					</div>
@@ -222,7 +224,7 @@
 	        </div>
         </div>
       </div>
-			<div class="row">
+			<!-- <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-4">
 	        <div class="grid wow zoomIn">
             <figure class="effect-bubba">
@@ -258,7 +260,7 @@
 	          </figure>
 		      </div> 
 			  </div>         
-    	</div>
+    	</div> -->
 		</div>
 	</section>
 	<!-- Конец работ -->
