--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -44,6 +44,7 @@
               <a href="#">Education</a>
               <ul class="nav__sublist">
                 <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="../education/financial-news.html">Financial News</a></li>
               </ul>
             </li>
             <li><a class="nav__chat" href="../trading-room.html">Chat Room</a></li>
@@ -490,6 +491,7 @@
         <ul class="footer__list">
           <li><b>Education</b></li>
           <li><a href="../education/star-trader-course.html">Star Trader Course</a></li>
+          <li><a href="../education/financial-news.html">Financial News</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
