--- a/investix/education/star-trader-course.html
+++ b/investix/education/star-trader-course.html
@@ -44,6 +44,7 @@
               <a href="#">Education</a>
               <ul class="nav__sublist">
                 <li><a class="nav__active">Star Trader Course</a></li>
+                <li><a href="financial-news.html">Financial News</a></li>
               </ul>
             </li>
             <li><a href="../trading-room.html">Chat Room</a></li>
