--- a/investix/trading-room.html
+++ b/investix/trading-room.html
@@ -44,15 +44,10 @@
               <a href="#">Education</a>
               <ul class="nav__sublist">
                 <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
+                <li><a href="education/financial-news.html">Financial News</a></li>
               </ul>
             </li>
             <li><a class="nav__chat  nav__active">Chat Room</a></li>
-            <!-- <li><a href="#">Education</a></li>
-            <li><a href="#">Trading Tools</a></li>
-            <li><a href="#">Contacts</a></li> -->
-            <!-- <li> -->
-              <!-- select -->
-            <!-- </li> -->
           </ul>
         </nav>
         <a class="button  button--small  header__button" href="#">14 Days Free Trial</a>
@@ -542,6 +537,7 @@
         <ul class="footer__list">
           <li><b>Education</b></li>
           <li><a href="education/star-trader-course.html">Star Trader Course</a></li>
+          <li><a href="education/financial-news.html">Financial News</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
